# GeoMasterPy

./: .gitignore  GITHUB_TEST.md  LICENSE  QUICK_START.ipynb  README.md  README_DEPLOYMENT.md  RUN_APP.md  STREAMLIT_DEPLOY.md  auth_earth_engine.py  debug_streamlit.py  netlify.toml  pyproject.toml  requirements.txt  requirements_basic.txt  requirements_cloud.txt  requirements_minimal.txt  requirements_streamlit.txt  run_app.py  run_app.sh  run_app_test.py  run_local.py  setup.py  start_app.py  streamlit_app.py  streamlit_app_cloud.py  streamlit_app_fixed.py  streamlit_app_simple.py  streamlit_land_app.py  test_installation.py
.streamlit/: config.toml
archive/old_apps/: land-app-ui-mockup-fixed.html  start_geomasterpy.py  streamlit_app_safe.py  streamlit_land_app.py  streamlit_land_app_final.py  streamlit_land_app_fixed.py  streamlit_land_app_v2.py  streamlit_simple.py
archive/old_scripts/: run_app.sh  run_land_app.sh  run_land_app_fixed.sh  run_land_app_v2.sh
deployment/: DEPLOYMENT_CHECKLIST.md  NETLIFY_DEPLOY.md  README_DEPLOYMENT.md  STREAMLIT_SOLUTION.md  deploy.sh  streamlit_config.md
docs/: README_ORGANIZED.md
docs/api/: development-lessons-learned.md  learning-center-user-guide.md
docs/architecture/: project-architecture.mmd
docs/source/: api_reference.rst  conf.py  index.rst
docs/user_guide/: comprehensive-development-roadmap.md  environmental-suitability-mapping-spec.md  land-app-implementation-summary.md  land-app-specification.md
examples/: 01_basic_usage.ipynb  02_data_analysis.ipynb  03_publication_maps.ipynb
geomasterpy/: __init__.py
scripts/: demo_without_ee.py  setup_earth_engine.py
src/web/: index.html  (+1 more)
tests/: __init__.py  conftest.py  test_data.py  test_map.py
(+13 files in other folders)
