[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geomasterpy"
version = "0.1.0"
description = "Interactive Geospatial Analysis Library for Google Earth Engine"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GeoMasterPy Development Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "earthengine-api>=0.1.300",
    "ipyleaflet>=0.17.0",
    "ipywidgets>=8.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "cartopy>=0.21.0",
    "matplotlib>=3.5.0",
    "folium>=0.14.0",
    "geopandas>=0.12.0",
    "rasterio>=1.3.0",
    "shapely>=1.8.0",
    "requests>=2.28.0",
    "pillow>=9.0.0",
    "geojson>=2.5.0",
    "jupyter>=1.0.0",
    "voila>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "sphinx>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/geomasterpy"
Documentation = "https://geomasterpy.readthedocs.io"
Repository = "https://github.com/yourusername/geomasterpy"
"Bug Tracker" = "https://github.com/yourusername/geomasterpy/issues"